--- a/index.html
+++ b/index.html
@@ -4,31 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog sobre Perros</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Bienvenidos al Blog sobre Perros</h1>
-    <p>Este blog es para fomentar la apreciacion y amor hacia los perros</p>
+    <header>
+    <h1 class="Bienvenida">Bienvenidos al Blog sobre Perros</h1>
+    <p class="Bienvenida">Este blog es para fomentar la apreciacion y amor hacia los perros</p>
     <img src="images/perros_pequenos.jpg" alt="Perro" width="200" height="100">
+    </header>
 
-    <h2>¿Qué son los perros?</h2>
-    <p>Los perros (Canis lupus familiaris) son mamíferos domesticados que han acompañado al ser humano por miles de años. Son conocidos por su lealtad, inteligencia y capacidad para realizar diversas tareas junto a las personas. Los perros han evolucionado a partir de los lobos y han sido criados selectivamente para desarrollar habilidades específicas. Además, forman parte integral de la vida humana, participando en actividades como la caza, el pastoreo, la seguridad y, más recientemente, como compañeros fieles en el hogar. Su increíble capacidad de adaptación les ha permitido vivir en casi todos los entornos habitados por el hombre.</p>
+    <summary>
+    <h2 class="perros">¿Qué son los perros?</h2>
+    <p class="perros">Los perros (Canis lupus familiaris) son mamíferos domesticados que han acompañado al ser humano por miles de años. Son conocidos por su lealtad, inteligencia y capacidad para realizar diversas tareas junto a las personas. Los perros han evolucionado a partir de los lobos y han sido criados selectivamente para desarrollar habilidades específicas. Además, forman parte integral de la vida humana, participando en actividades como la caza, el pastoreo, la seguridad y, más recientemente, como compañeros fieles en el hogar. Su increíble capacidad de adaptación les ha permitido vivir en casi todos los entornos habitados por el hombre.</p>
+    </summary>
 
-    <h2>¿Cuántas razas existen?</h2>
-    <p>Según la Federación Cinológica Internacional (FCI), existen más de 340 razas reconocidas, agrupadas en diferentes categorías según sus características y funciones.</p>
+    <section><!-- Tipos de razas -->
+    <h2 class="razas">¿Cuántas razas existen?</h2>
+    <p class="razas">Según la Federación Cinológica Internacional (FCI), existen más de 340 razas reconocidas, agrupadas en diferentes categorías según sus características y funciones.</p>
+    </section>
 
-    <h2>Tipos de perros</h2>
-    <p>Los perros pueden clasificarse según su función en dos categorías principales:</p>
+    <section>
+    <h2 class="tipos">Tipos de perros</h2>
+    <p class="tipos">Los perros pueden clasificarse según su función en dos categorías principales:</p>
     <ul>
         <li><strong>Perros de trabajo:</strong> Incluyen razas utilizadas para tareas como el pastoreo, la caza, la seguridad y la búsqueda y rescate.</li>
         <li><strong>Perros de compañía:</strong> Razas que han sido criadas principalmente para ser mascotas y brindar afecto.</li>
     </ul>
     <img src="images/perrohumano001.jpg" alt="Perros de compañia y trabajo" width="500" height="250">
+    </section>
 
-    <h2>Evolución de los perros</h2>
-    <p>Los perros descienden de los lobos y fueron domesticados hace aproximadamente 15,000 años. A través de la cría selectiva, los humanos han desarrollado diferentes razas con características únicas adaptadas a diversas necesidades.</p>
+    <section>
+    <h2 class="evolucion">Evolución de los perros</h2>
+    <p class="evolucion">Los perros descienden de los lobos y fueron domesticados hace aproximadamente 15,000 años. A través de la cría selectiva, los humanos han desarrollado diferentes razas con características únicas adaptadas a diversas necesidades.</p>
+    </section>
 
-    <h2>Mis razas favoritas</h2>
-    <p>Esto no es un top, son las mejores razas de perros para mi gusto:</p>
+    <section>
+    <h2 class="razas-favoritas">Mis razas favoritas</h2>
+    <p class="razas-favoritas">Esto no es un top, son las mejores razas de perros para mi gusto:</p>
     <ol>
         <li>Standforshire Pitbull</li>
         <img src="images/standforshire.jpg" alt="Standforshire Pitbull" width="100" height="50">
@@ -41,8 +56,11 @@
         <li>Mestizos</li>
         <img src="images/perro_mestizo.jpg" alt="Mestizos" width="100" height="50">
     </ol>
+    </section>
 
-    <h3>Biografía del autor:</h3>
-    <p>Soy Emiliano Flores, amante de los perros y padre de 2 hermosos perrhijos, una mestiza de 2 años y un salchicha adoptado de 6 años.</p>
+    <footer>
+    <h3 class="biografia">Biografía del autor:</h3>
+    <p class="biografia">Soy Emiliano Flores, amante de los perros y padre de 2 hermosos perrhijos, una mestiza de 2 años y un salchicha adoptado de 6 años.</p>
+    </footer>
 </body>
 </html>
